
0.3.0
=====

* FEATURE: Add support for Mediawiki categories.
* FEATURE: Add Special:Categories.
* FEATURE: Add Special:Manage, remove Special:Delete.
* FEATURE: Add support for undeleting a topic.
* FEATURE: Drop jam_image table - unused.
* BUG: Possible null pointer exception in file persistency mode, pointed
  out by User:garem.
* BUG: Fix possible PageInfo corruption.  Pointed out by Scott Crocco.
* BUG: Upgrade to javadiff 1.0.5 to fix several diff issues.
* BUG: Parser was not parsing links of the form [[#Section]] properly.
* BUG: Parser was not parsing links with parentheses (such as
  [[Ajax (programming)]]) properly.
* BUG: Some file input/output streams not properly closed when in file
  persistency mode.
* BUG: Topic names beginning with "Special:" should not be allowed.
* FEATURE: Major parser architecture updates.  Parser should be slightly
  faster when parsing edits.
* FEATURE: Fix reloading of recent changes in ANSI database mode.
* FEATURE: Special:AllTopics renamed to Special:Allpages for Mediawiki
  compatibility.
* BUG: Categories and images no longer displayed on Special:Allpages.
* FEATURE: Delete activation.jar - unused.
* FEATURE: Code cleanups including removal of unused files.
* FEATURE: Updated Hungarian translations from bDaneE.

0.2.1
=====

* FEATURE: Support image resizing from [[Image]] tags.
* FEATURE: Allow Wiki syntax in image and anchor link captions.
* FEATURE: Update of the diff code to simplify the code and address some
  issues with diffs.
* BUG: Piped link within Wiki table syntax was displaying incorrectly.
* BUG: Remove section edit links from printable page.
* FEATURE: CSS fixes from Scott Croco (scroco).
* BUG: Fix XHTML issue related to extra <p> tag for images.
* FEATURE: Updated Chinese translations from ewen0930.
* FEATURE: Updated Hungarian translations from bDaneE.

0.2.0
=====

* FEATURE: Overhaul the search engine, make better use of Lucene for
  highlighting, delete numerous unneeded classes.